// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaterialGrid Cell component renders hidden with view port columns count set to 0 1`] = `
.c0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  display: none;
}

@supports (display:grid) {
  .c0 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c0 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
    display: none;
  }
}

@media (min-width:752px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
    display: none;
  }
}

@media (min-width:1008px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    display: none;
  }
}

@media (min-width:1232px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    display: none;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

<div
  className="c0"
/>
`;

exports[`MaterialGrid Cell component renders with column order 1`] = `
.c0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@supports (display:grid) {
  .c0 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c0 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
  }
}

@media (min-width:752px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
  }
}

@media (min-width:1008px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
  }
}

@media (min-width:1232px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

<div
  className="c0"
  order={2}
/>
`;

exports[`MaterialGrid Cell component renders with custom responsive column count for view ports 1`] = `
.c0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  width: calc(100% - 16px);
}

@supports (display:grid) {
  .c0 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@supports (display:grid) {
  .c0 {
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c0 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
    width: calc(100% - 16px);
  }
}

@media (min-width:752px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
    width: calc(100% - 24px);
  }
}

@media (min-width:1008px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(100% - 24px);
  }
}

@media (min-width:1232px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(100% - 24px);
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

<div
  className="c0"
/>
`;

exports[`MaterialGrid Grid component renders a div per default 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0 auto;
  max-width: 1472px;
  padding: 0 16px;
}

@media (min-width:512px) {
  .c0 {
    padding: 0 24px;
  }
}

@media (min-width:752px) {
  .c0 {
    padding: 0 32px;
  }
}

@media (min-width:1008px) {
  .c0 {
    padding: 0 48px;
  }
}

@media (min-width:1232px) {
  .c0 {
    padding: 0 64px;
  }
}

<div
  className="c0"
/>
`;

exports[`MaterialGrid Grid component renders with Rows and Cells (children) 1`] = `
.c2 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
}

.c0 {
  box-sizing: border-box;
  margin: 0 auto;
  max-width: 1472px;
  padding: 0 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  margin: 0;
  margin-bottom: 16px;
}

@supports (display:grid) {
  .c2 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c2 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
  }
}

@media (min-width:752px) {
  .c2 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
  }
}

@media (min-width:1008px) {
  .c2 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
  }
}

@media (min-width:1232px) {
  .c2 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

@media (min-width:512px) {
  .c0 {
    padding: 0 24px;
  }
}

@media (min-width:752px) {
  .c0 {
    padding: 0 32px;
  }
}

@media (min-width:1008px) {
  .c0 {
    padding: 0 48px;
  }
}

@media (min-width:1232px) {
  .c0 {
    padding: 0 64px;
  }
}

@media (min-width:512px) {
  .c1 {
    margin-bottom: 16px;
  }
}

@media (min-width:752px) {
  .c1 {
    margin-bottom: 24px;
  }
}

@media (min-width:1008px) {
  .c1 {
    margin-bottom: 24px;
  }
}

@media (min-width:1232px) {
  .c1 {
    margin-bottom: 24px;
  }
}

@supports (display:grid) {
  .c1 {
    display: grid;
    grid-gap: 16px;
    grid-template-columns: repeat(4,minmax(0,1fr));
  }
}

@media (min-width:512px) {

}

@media (min-width:752px) {

}

@media (min-width:1008px) {

}

@media (min-width:1232px) {

}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
  </div>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
    <div
      className="c2"
    />
  </div>
</div>
`;

exports[`MaterialGrid Offset component renders hidden with no values, because of default props 1`] = `
.c0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  display: none;
}

@supports (display:grid) {
  .c0 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c0 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
    display: none;
  }
}

@media (min-width:752px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
    display: none;
  }
}

@media (min-width:1008px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    display: none;
  }
}

@media (min-width:1232px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    display: none;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

<div
  className="c0"
/>
`;

exports[`MaterialGrid Offset component renders hidden with view port columns count set to 0 1`] = `
.c0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  display: none;
}

@supports (display:grid) {
  .c0 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c0 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
    display: none;
  }
}

@media (min-width:752px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
    display: none;
  }
}

@media (min-width:1008px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    display: none;
  }
}

@media (min-width:1232px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    display: none;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

<div
  className="c0"
/>
`;

exports[`MaterialGrid Offset component renders with column order 1`] = `
.c0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@supports (display:grid) {
  .c0 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c0 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
  }
}

@media (min-width:752px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
  }
}

@media (min-width:1008px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
  }
}

@media (min-width:1232px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

<div
  className="c0"
  order={2}
/>
`;

exports[`MaterialGrid Offset component renders with custom responsive column count for view ports 1`] = `
.c0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  width: calc(100% - 16px);
}

@supports (display:grid) {
  .c0 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@supports (display:grid) {
  .c0 {
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c0 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
    width: calc(100% - 16px);
  }
}

@media (min-width:752px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
    width: calc(100% - 24px);
  }
}

@media (min-width:1008px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(100% - 24px);
  }
}

@media (min-width:1232px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    width: calc(100% - 24px);
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

<div
  className="c0"
/>
`;

exports[`MaterialGrid additional customizations with custom tags renders Cell with custom tag name 1`] = `
.c0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
}

@supports (display:grid) {
  .c0 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c0 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
  }
}

@media (min-width:752px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
  }
}

@media (min-width:1008px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
  }
}

@media (min-width:1232px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

<section
  className="c0"
/>
`;

exports[`MaterialGrid additional customizations with custom tags renders Grid with custom tag name 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0 auto;
  max-width: 1472px;
  padding: 0 16px;
}

@media (min-width:512px) {
  .c0 {
    padding: 0 24px;
  }
}

@media (min-width:752px) {
  .c0 {
    padding: 0 32px;
  }
}

@media (min-width:1008px) {
  .c0 {
    padding: 0 48px;
  }
}

@media (min-width:1232px) {
  .c0 {
    padding: 0 64px;
  }
}

<section
  className="c0"
/>
`;

exports[`MaterialGrid additional customizations with custom tags renders Offset with custom tag name 1`] = `
.c0 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  box-sizing: border-box;
  margin: calc(16px / 2);
  width: calc(100% - 16px);
  display: none;
}

@supports (display:grid) {
  .c0 {
    margin: 0;
    width: auto;
    grid-column-end: span 4;
  }
}

@media (min-width:512px) {
  .c0 {
    display: block;
    margin: calc(16px / 2);
    width: calc(50% - 16px);
    display: none;
  }
}

@media (min-width:752px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(50% - 24px);
    display: none;
  }
}

@media (min-width:1008px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    display: none;
  }
}

@media (min-width:1232px) {
  .c0 {
    display: block;
    margin: calc(24px / 2);
    width: calc(33.33333% - 24px);
    display: none;
  }
}

@media screen and (-ms-high-contrast:active),screen and (-ms-high-contrast:none) {

}

<section
  className="c0"
/>
`;

exports[`MaterialGrid additional customizations with custom tags renders Row with custom tag name 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  -ms-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  margin: 0;
  margin-bottom: 16px;
}

@media (min-width:512px) {
  .c0 {
    margin-bottom: 16px;
  }
}

@media (min-width:752px) {
  .c0 {
    margin-bottom: 24px;
  }
}

@media (min-width:1008px) {
  .c0 {
    margin-bottom: 24px;
  }
}

@media (min-width:1232px) {
  .c0 {
    margin-bottom: 24px;
  }
}

@supports (display:grid) {
  .c0 {
    display: grid;
    grid-gap: 16px;
    grid-template-columns: repeat(4,minmax(0,1fr));
  }
}

@media (min-width:512px) {

}

@media (min-width:752px) {

}

@media (min-width:1008px) {

}

@media (min-width:1232px) {

}

<section
  className="c0"
/>
`;
